fixed until point 7

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <li><a href="#quienes">Quiénes somos</a></li>
       <li><a href="#novedades">Novedades</a></li>
       <li><a href="#separte">Sé parte</a></li>
-      <li><a href="#portalposventa">Portal posventa</a></li>
+      <li><a href="#portalposventa">Portal Posventa</a></li>
     </ul>
   </header>
 
@@ -68,11 +68,11 @@
           <img src="./assets/Banner 1.png" alt="Los Angeles" style="width:100%;">
           <div class="text-in-carousel" style="left: 50%; top: 45%; width: 100%;">
               <div style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
-                  <h1 class="banner-title" style="font-size: 2.5vw !important; margin: 0px 0px 00px;">INNOVACIÓN TECNOLÓGICA CONSTANTE</h1>
-                  <h2 class="banner-subtitle" style="padding-top: 0px; font-size: 16px; padding-bottom: 5px;">¡Ingresá a nuestra web app!</h2>
-                  <button class="banner-button" style="margin-top: 10px; width: 120px; padding: 5px 5px 5px 5px; height: 25px;
-                  display: flex; flex-direction: row; align-items: center; justify-content: center; font-size: 10px; border-radius: 8px;
-                  " id="ingrese">Ingrese aquí</button>
+                  <h1 class="banner-title" style="font-size: 4vw !important; margin: 0px 0px 00px;">INNOVACIÓN TECNOLÓGICA CONSTANTE</h1>
+                  <h2 class="banner-subtitle" style="padding-top: 0px; font-size: 2vw; padding-bottom: 5px;">¡Ingresá a nuestra web app!</h2>
+                  <button class="banner-button" style="margin-top: 10px; width: 12rem; padding: 20px; height: 2em;
+                  display: flex; flex-direction: row; align-items: center; justify-content: center; font-size: 15px; border-radius: 8px;
+                  " id="ingrese"><strong>Ingrese aquí</strong></button>
               </div>
           </div>
         </div>
@@ -234,7 +234,7 @@
           <h1>Servicio de Concierge</h1>
           <h2>Porque lo que más nos interesa es asistirte, te ayudamos a hacer tus reservaciones para restaurantes, comprar entradas para eventos, preparar las vacaciones soñadas, concertar lo necesario para tus actividades empresariales en el mundo entero, localizar artículos difíciles de encontrar, así como comprar y entregar regalos. 
           </h2>
-      </div>        <img src="./assets/services/energy.jpg" alt="">
+      </div>        <img src="./assets/services/energy2.jpg" alt="">
       <div class="services-box">
           <h1>Servicio Energy</h1>
           <h2> Brindamos una solución integral a nuestros clientes al momento de necesitar un cambio de batería. Integramos el servicio de asistencia a través de nuestros mecánicos especializados con un producto con la más alta calidad, lo que nos permite ofrecer una garantía de 18 meses. 
@@ -290,7 +290,7 @@
     <div class="two-div">
 
       <div class="one-div">
-        <img src="./assets/camion_carga.jpg" alt="" style="width: 100%; max-height: auto;">
+        <img src="./assets/24 horas.jpg" alt="" style="width: 100%; max-height: auto;">
       </div>
 
       <div class="one-div">
@@ -307,7 +307,7 @@
       </div>
 
       <div class="one-div">
-        <img src="./assets/24 horas.jpg" alt="Dos personas" style="width: 100%; max-height: auto;">
+        <img src="./assets/camion_carga.jpg" alt="Dos personas" style="width: 100%; max-height: auto;">
       </div>
 
       <div class="one-div">
@@ -336,7 +336,7 @@
           <div class="flip-card" style="width: 100%; height: 100%;">
             <div class="flip-card-inner" style="width: 100%; max-height: 100%;">
               <div class="flip-card-front" style="width: 100%; max-height: 100%;">
-                <img src="./content/Exported/30.png" alt="Cien por ciento" style="width: 100%; max-height: 100%;">
+                <img src="./content/Exported/mas30.png" alt="Cien por ciento" style="width: 100%; max-height: 100%;">
               </div>
               <div class="flip-card-back">
                 <img src="./content/Exported/De experiencia.png" alt="Garantía" style="width: 100%; max-height: 100%;">
@@ -388,10 +388,13 @@
 
 <section class="logos">
 
-  <div class="logos-title">
-  <h1>Confían en nosotros</h1>
-  <h2>Los clientes que confían en S.O.S para el crecimiento de su empresa.</h2>
-</div>
+<span class="border-0">
+  <div class="logos-title border border-0">
+    <h1>Confían en nosotros</h1>
+    <h2>Los clientes que confían en S.O.S para el crecimiento de su empresa.</h2>
+  </div>
+</span>
+  
 
 
   <div class="customer-logos">
@@ -507,7 +510,7 @@ background-color: rgba(222, 222, 222);
 background-color: rgba(222, 222, 222);
         
         "        
-        class="btn btn-primary" data-toggle="modal" data-target="#modalSOS">
+        class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
           Más información</button>
       </p>
     </div>
