fixed responsive of modal previews

--- a/index.html
+++ b/index.html
@@ -472,46 +472,27 @@
     "
     data-toggle="modal" data-target="#exampleModalCenter"></button>
     <div class="right-text-one" style="padding-left: 0px;">
-     <span style="font-weight: 600; font-size: 16pt; color: #333333;
-     line-height: 30pt;
-     ">WEB APP</span><br>
-     <span style="font-weight: 600; font-size: 13pt; color: #4D4D4D;
-     line-height: 30pt;
-     ">¡Seguimos innovando!</span>
-     <p style="font-size: 12pt; line-height: 21pt; 
-     font-weight: 450;
-     color: #4D4D4D;">Desarrollamos nuestra web app con tecnología PWA,
+     <span class="modal-preview-tittle">WEB APP</span><br>
+     <span class="modal-preview-subtittle">¡Seguimos innovando!</span>
+     <p class="modal-preview-text">Desarrollamos nuestra web app con tecnología PWA,
        para que puedas realizar el pedido de tu servicio
        desde cualquier dispositivo...
        <br>
-       <button style="font-size: 12pt; font-weight: 600; color: #FF1D25;
-        margin-top: 5px; line-height: 21pt;
-background-color: rgba(222, 222, 222);
-        
-        " class="btn btn-primary" data-toggle="modal" data-target="#modalSOS">
+       <button      
+        class="btn btn-primary modal-preview-button data-toggle="modal" data-target="#modalSOS">
          Más información</button>
      </p>
     </div>
 
 
     <div class="right-text-two" style="padding-left: 0px;">
-      <span style="font-weight: 600; font-size: 16pt; color: #333333;
-      line-height: 30pt;">COVID-19</span><br>
-      <span style="font-weight: 600; font-size: 13pt; color: #4D4D4D;
-      line-height: 30pt;
-      ">Queremos contarte cómo seguimos trabajando</span>
-      <p style="font-size: 12pt; line-height: 21pt; 
-      font-weight: 450;
-      color: #4D4D4D;">Continuamos brindando todos nuestros servicios, respetando los protocolos de distanciamiento
+      <span class="modal-preview-tittle">COVID-19</span><br>
+      <span class="modal-preview-subtittle">Queremos contarte cómo seguimos trabajando</span>
+      <p class="modal-preview-text">Continuamos brindando todos nuestros servicios, respetando los protocolos de distanciamiento
                  social dictaminados. 
         <br>
-        <button
-        style="font-size: 12pt; font-weight: 600; color: #FF1D25;
-        margin-top: 5px; line-height: 21pt;
-background-color: rgba(222, 222, 222);
-        
-        "        
-        class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+        <button   
+        class="btn btn-primary modal-preview-button" data-toggle="modal" data-target="#exampleModalCenter">
           Más información</button>
       </p>
     </div>
