--- a/form-cv.html
+++ b/form-cv.html
@@ -160,10 +160,26 @@
                         </div>
 
                     </div>
+
+<style>
+    .recaptcha {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        text-align: center;
+        width: 100%;
+    }
+
+    .g-recaptcha {
+        width: 100% !important;
+    }
+
+</style>
+
                     <div class="form-row mt-2">
-                        <div class="col">
+                        <div class="col recaptcha">
                             <div class="g-recaptcha" data-sitekey="your_site_key"></div>
-                            <small>Recatcha será implementado y centrado en el futuro</small>
+                            <small>Recaptcha será implementado y centrado en el futuro</small>
                         </div>
                         
                     </div>
