--- a/form-prestadores.html
+++ b/form-prestadores.html
@@ -9,6 +9,14 @@
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 </head>
+
+<style>
+    input:focus {
+        background-color: rgba(0, 0, 0, 0.3) !important; 
+        color: white !important;
+    }
+</style>
+
 <body>
     <nav class="navbar navbar-expand navbar-light bg-transparent">
         <div class="ml-4 mt-4">
