--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
               <div style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
                   <h1 class="banner-title" style="font-size: 4vw !important; margin: 0px 0px 00px;">INNOVACIÓN TECNOLÓGICA CONSTANTE</h1>
                   <h2 class="banner-subtitle" style="padding-top: 0px; font-size: 2vw; padding-bottom: 5px;">¡Ingresá a nuestra web app!</h2>
-                  <button class="banner-button" style="margin-top: 10px; width: 12rem; padding: 20px; height: 2em;
-                  display: flex; flex-direction: row; align-items: center; justify-content: center; font-size: 15px; border-radius: 8px;
+                  <button class="banner-button banner-button-1"
                   " id="ingrese"><strong>Ingrese aquí</strong></button>
               </div>
           </div>
@@ -84,7 +83,7 @@
           <div class="text-in-carousel-2">
               <div class="banner-content-2">
                   <h1 class="banner-title">ASISTIMOS EN LOS <br>MOMENTOS CLAVES</h1>
-                  <h2 class="banner-subtitle">¡Conocé todos nuestros servicios!</h2>
+                  <h2 class="banner-subtitle" >¡Conocé todos nuestros servicios!</h2>
                   <button class="banner-button" id="ingrese"><strong>Ingrese aquí</strong></button>
               </div>
           </div>
