--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+
       </ol>
   
       <!-- Wrapper for slides -->
@@ -98,6 +100,10 @@
                   <button class="banner-button" id="ingrese"><strong>Ingrese aquí</strong></button>
               </div>
           </div>
+        </div>
+
+        <div class="item">
+          <img src="./assets/banner-4.jpg" alt="New York" style="width:100%;">
         </div>
     
       </div>
