cambios texto y clientes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <li><a href="#quienes">Quiénes somos</a></li>
       <li><a href="#novedades">Novedades</a></li>
       <li><a href="#separte">Sé parte</a></li>
-      <li><a href="#portalpostventa">Portal Postventa</a></li>
+      <li><a href="#portalcorporativo">Portal Corporativo</a></li>
     </ul>
   </header>
 
@@ -73,7 +73,7 @@
           <div class="text-in-carousel" style="left: 50%; top: 45%; width: 100%;">
               <div style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
                   <h1 class="banner-title" style="font-size: 4vw !important; margin: 0px 0px 00px;">INNOVACIÓN TECNOLÓGICA CONSTANTE</h1>
-                  <h2 class="banner-subtitle" style="padding-top: 0px; font-size: 2vw; padding-bottom: 5px;">¡Ingresá a nuestra web app!</h2>
+                  <h2 class="banner-subtitle" style="padding-top: 0px; font-size: 2vw; padding-bottom: 5px;">¡Ingresá a nuestra WebApp!</h2>
                   <button class="banner-button banner-button-1"
                   " id="ingrese"><strong>Ingrese aquí</strong></button>
               </div>
@@ -96,7 +96,7 @@
           <div class="text-in-carousel-3">
               <div class="banner-content-3">
                   <h1 class="banner-title">SOMOS LA RED<br>MÁS GRANDE DEL PAÍS</h1>
-                  <h2 class="banner-subtitle">¡Ingresá a nuestra web app!</h2>
+                  <h2 class="banner-subtitle">¡Ingresá a nuestra WebApp!</h2>
                   <button class="banner-button" id="ingrese"><strong>Ingrese aquí</strong></button>
               </div>
           </div>
@@ -118,8 +118,8 @@
 
 
     <div class="contact-header">
-      <h1>Ayuda inmediata</h1>
-      <h2 style="font-weight: 300;">Si necesitás comunicarte con nosotros, lo podés hacer a través de estos medios</h2>
+      <h1>Línea directa por cliente</h1>
+      <h2 style="font-weight: 300;">Comunícate con nosotros de manera rápida y fácil</h2>
     </div>
 
     <div class="contact-row">
@@ -129,8 +129,8 @@
           <img src="./content/red.png" alt="" class="sweep-this">
             <div class="contact-column-text">
               <img src="./content/whatsapp.png" alt="whatsapp logo" class="small-img" id="hide">
-                <h3 class="contact-title">Web App</h3>
-                <p class="contact-p">Ingresá a la web app y solicitá tu servicio</p>
+                <h3 class="contact-title">WebApp</h3>
+                <p class="contact-p">Ingresá a la WebApp y solicitá tu servicio</p>
                 <button class="hidden-button">Ingresar</button>
             </div>
         </div>
@@ -140,7 +140,7 @@
             <div class="contact-column-text">
             <img src="./content/whatsapp.png" alt="whatsapp logo" class="small-img">
             <h3 class="contact-title">WhatsApp</h3>
-            <p class="contact-p">¡Comunicate con nosotros por WhatsApp!</p>
+            <p class="contact-p">¡Comunícate con nosotros por WhatsApp!</p>
             <button class="hidden-button">Ingresar</button>
         </div>
     </div>
@@ -155,7 +155,7 @@
               <img src="./content/0800.png" alt="webapp logo" class="small-img">
               <h3 class="contact-title">Línea directa por cliente</h3>
                 <p class="contact-p">Llamanos y ponete en contacto para que <br> podamos resolver tus problemas</p>
-                <button class="hidden-button">Ingresar</button>
+                <button class="hidden-button">Llamar</button>
             </div>
         </div>
 
@@ -178,7 +178,7 @@
 
 <section class="services" id="servicios">
 <div class="services-title">
-  <h1>Nuestros servicios</h1>
+  <h1>Nuestras Asistencias</h1>
 </div>
   <div class="row">
       <img class="zoom-in" src="./assets/services/Asistencia Vehicular.jpg" id="vehicular" alt="">
@@ -429,11 +429,13 @@
     <div class="slide"><img src="./content/Logos de clientes/Metropolitana.png"></div>
     <div class="slide"><img src="./content/Logos de clientes/Mini.PNG"></div>
     <div class="slide"><img src="./content/Logos de clientes/Nacion.PNG"></div>
+    <div class="slide"><img src="./content/Logos de clientes/Nativa.png"></div>
     <div class="slide"><img src="./content/Logos de clientes/Orbis.PNG"></div>
     <div class="slide"><img src="./content/Logos de clientes/Peugeot.PNG"></div>
     <div class="slide"><img src="./content/Logos de clientes/Prosegur.PNG"></div>
     <div class="slide"><img src="./content/Logos de clientes/Ram.PNG"></div>
     <div class="slide"><img src="./content/Logos de clientes/Rio Uruguay.PNG"></div>
+    <div class="slide"><img src="./content/Logos de clientes/santander.png"></div>
     <div class="slide"><img src="./content/Logos de clientes/Sura.PNG"></div>
     <div class="slide"><img src="./content/Logos de clientes/Toyota.PNG"></div>
     <div class="slide"><img src="./content/Logos de clientes/TPC.PNG"></div>
@@ -493,9 +495,9 @@
     "
     data-toggle="modal" data-target="#exampleModalCenter"></button>
     <div class="right-text-one" style="padding-left: 0px;">
-     <span class="modal-preview-tittle">WEB APP</span><br>
+     <span class="modal-preview-tittle">WEBAPP</span><br>
      <span class="modal-preview-subtittle">¡Seguimos innovando!</span>
-     <p class="modal-preview-text">Desarrollamos nuestra web app con tecnología PWA,
+     <p class="modal-preview-text">Desarrollamos nuestra WebApp con tecnología PWA,
        para que puedas realizar el pedido de tu servicio
        desde cualquier dispositivo...
        <br>
@@ -573,10 +575,10 @@
         <div class="modal-body" style="display: flex; flex-direction: row;">
           <img src="./assets/sosrosa2.png" alt="" class="img-rounded">
           <div class="modal-text">
-           <h4 style="color: red;">Web App</h4>
+           <h4 style="color: red;">WebApp</h4>
             <p>¡Seguimos innovando!</p>
             <p>
-              Desarrollamos nuestra web app con tecnología PWA, para que puedas
+              Desarrollamos nuestra WebApp con tecnología PWA, para que puedas
               realizar el pedido de tu servicio desde cualquier dispositivo, sin necesidad
               de descargar ninguna app ni realizar ningún llamado. <br>
               Solo tenés que ingresar a https://tuasistencia.redsos.com.ar y completando
@@ -653,7 +655,7 @@
     <a>
       <img class="icon" src="./assets/signo de pregunta-04.png"></img>
     </a>
-    <h4>Consultas y reclamos</h4>
+    <h4>Consultas y sugerencias</h4>
     <h5 style="padding-right: 3.5vw; padding-left: 3.5vw;">
       Trabajamos en tus comentarios sobre nuestros servicios</h5>
   </li>
