--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <div style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
                   <h1 class="banner-title" style="font-size: 4vw !important; margin: 0px 0px 00px;">INNOVACIÓN TECNOLÓGICA CONSTANTE</h1>
                   <h2 class="banner-subtitle" style="padding-top: 0px; font-size: 2vw; padding-bottom: 5px;">¡Ingresá a nuestra WebApp!</h2>
-                  <button class="banner-button banner-button-1"
+                  <button onclick="window.location.href='https://tuasistencia.redsos.com.ar/home/login'"  class="banner-button banner-button-1"
                   " id="ingrese"><strong>Ingrese aquí</strong></button>
               </div>
           </div>
@@ -85,8 +85,8 @@
           <div class="text-in-carousel-2">
               <div class="banner-content-2">
                   <h1 class="banner-title">ASISTIMOS EN LOS <br>MOMENTOS CLAVES</h1>
-                  <h2 class="banner-subtitle" >¡Conocé todos nuestros servicios!</h2>
-                  <button class="banner-button" id="ingrese"><strong>Ingrese aquí</strong></button>
+                  <h2 class="banner-subtitle" >¡Conocé todos nuestras asistencias!</h2>
+                  <button onclick="window.location.href='#servicios'" class="banner-button" id="btn-servicios"><strong>Ingrese aquí</strong></button>
               </div>
           </div>
         </div>
@@ -97,13 +97,13 @@
               <div class="banner-content-3">
                   <h1 class="banner-title">SOMOS LA RED<br>MÁS GRANDE DEL PAÍS</h1>
                   <h2 class="banner-subtitle">¡Ingresá a nuestra WebApp!</h2>
-                  <button class="banner-button" id="ingrese"><strong>Ingrese aquí</strong></button>
+                  <button onclick="window.location.href='https://tuasistencia.redsos.com.ar/home/login'"  class="banner-button" id="ingrese"><strong>Ingrese aquí</strong></button>
               </div>
           </div>
         </div>
 
         <div class="item">
-          <img src="./assets/banner-4.jpg" alt="New York" style="width:100%;">
+          <img src="./assets/banner-web-osa.png" alt="New York" style="width:100%;">
         </div>
     
       </div>
@@ -131,7 +131,7 @@
               <img src="./content/whatsapp.png" alt="whatsapp logo" class="small-img" id="hide">
                 <h3 class="contact-title">WebApp</h3>
                 <p class="contact-p">Ingresá a la WebApp y solicitá tu servicio</p>
-                <button class="hidden-button">Ingresar</button>
+                <button class="hidden-button" onclick="window.location.href='https://tuasistencia.redsos.com.ar/home/login'">Ingresar</button>
             </div>
         </div>
 
@@ -141,7 +141,7 @@
             <img src="./content/whatsapp.png" alt="whatsapp logo" class="small-img">
             <h3 class="contact-title">WhatsApp</h3>
             <p class="contact-p">¡Comunícate con nosotros por WhatsApp!</p>
-            <button class="hidden-button">Ingresar</button>
+            <button class="hidden-button" onclick="window.location.href='https://bit.ly/2HQWJTE'">Contactar</button>
         </div>
     </div>
 
