--- a/form-comentarios.html
+++ b/form-comentarios.html
@@ -146,7 +146,7 @@
   
     <div class="links">
       <button type="button" class="btn btn-link">Datos útiles</button>
-      <button type="button" class="btn btn-link" href="#">Portal postventa</button>
+      <button type="button" class="btn btn-link" onclick="window.location.href='https://consultadeservicios.redsos.com.ar/'">Portal postventa</button>
 
      <br>
     </div>
