--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <img src="./content/0800.png" alt="webapp logo" class="small-img">
               <h3 class="contact-title">Línea directa por cliente</h3>
                 <p class="contact-p">Llamanos y ponete en contacto para que <br> podamos resolver tus problemas</p>
-                <button class="hidden-button">Llamar</button>
+                <button class="hidden-button" onclick="window.location.href='numeros-clientes.html'">Llamar</button>
             </div>
         </div>
 
@@ -581,7 +581,7 @@
               Desarrollamos nuestra WebApp con tecnología PWA, para que puedas
               realizar el pedido de tu servicio desde cualquier dispositivo, sin necesidad
               de descargar ninguna app ni realizar ningún llamado. <br>
-              Solo tenés que ingresar a https://tuasistencia.redsos.com.ar y completando
+              Solo tenés que ingresar a <a href="https://tuasistencia.redsos.com.ar">https://tuasistencia.redsos.com.ar</a> y completando
               algunas sencillas preguntas podrás solicitar tu servicio, ver en dónde está
               tu móvil asignado y conocer el tiempo de espera.
               Un nuevo canal de contacto para hacer tu pedido cada vez más sencillo.
