terminado cambios 25-nov

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                 <img src="./content/Exported/1 millon.png" alt="Cien por ciento" style="width: 100%; max-height: 100%;">
               </div>
               <div class="flip-card-back">
-                <img src="./content/Exported/De personas auxiliadas.png" alt="Garantía" style="width: 100%; max-height: 100%;">
+                <img src="./content/Exported/personas-asistidas.png" alt="Garantía" style="width: 100%; max-height: 100%;">
               </div>
             </div>
           </div>
@@ -633,7 +633,7 @@
 
 
 <ul>
-  <li>
+  <li onclick="window.location.href='form-cv.html'">
     <a>
       <img class="icon" src="./assets/talento y cultura-04.png"
       style="left: 6px;"
@@ -642,7 +642,7 @@
     <h4>Talento y cultura</h4>
     <h5>Buscamos nuevos talentos, envianos tu CV</h5>
   </li>
-  <li>
+  <li onclick="window.location.href='form-prestadores.html'">
     <a>
       <img class="icon" src="./assets/prestadores.png" style="left: 3px;
       bottom: 5px;
@@ -651,7 +651,7 @@
     <h4>Prestadores y Proveedores</h4>
     <h5>Sé parte de nuestra red de prestadores    </h5>
   </li>
-  <li>
+  <li onclick="window.location.href='form-comentarios.html'">
     <a>
       <img class="icon" src="./assets/signo de pregunta-04.png"></img>
     </a>
@@ -693,7 +693,7 @@
 
   <button class="map-button" id="sede-rosario" onclick="rosario();">          
       <span style="color: #BB0222; font-weight: 600;">Sede Rosario</span> <br>
-      Bv. Oroño 1368  <br>
+      Carballo 194, piso 1 <br>
       341 522 0600 <br>
       recepcionros@redsos.com.ar 
   </button>
@@ -1004,7 +1004,7 @@ function cordoba() {
 }
 
 function rosario() {
-  map.src = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3348.009678389814!2d-60.6576940490322!3d-32.950753879333085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab6ba50e8513%3A0x35d2349c8822d057!2sBv.%20Oro%C3%B1o%201368%2C%20S2000DTN%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1602692979178!5m2!1ses!2sar";
+  map.src = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3349.0604425386205!2d-60.66649138481425!3d-32.92300128092812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b654ae16bc21a1%3A0xadcddd71fe834ae!2sLuis%20C%C3%A1ndido%20Carballo%20194%2C%20S2013CTV%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1606759724625!5m2!1ses-419!2sar";
 }
 
 function bsas() {
